# J8

./: .gitignore  README.md  dockerfile  dockerfile.local  entrypoint.sh  entrypoint_local.sh  init_profile_results.prof  install.sh  local_cyclonedds.xml
install/argj801_ctl_platform_interfaces/share/argj801_ctl_platform_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/argj801_sensors/share/argj801_sensors/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ctl_mission_interfaces/share/ctl_mission_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/path_manager/share/path_manager/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/argj801_ctl_platform/argj801_ctl_platform/: CMakeLists.txt
src/argj801_ctl_platform/argj801_ctl_platform/config/: params.yaml
src/argj801_ctl_platform/argj801_ctl_platform/src/: main.cpp
src/argj801_setup/: CMakeLists.txt  README.md
src/argj801_setup/config/: J8_params.yaml
src/argj801_setup/launch/: J8_launch.py  README.md
src/car_cpp/: CMakeLists.txt  package.xml
src/car_cpp/include/: motion.hpp  move_ros.hpp  obstacle_detection.hpp  odometria.hpp  utilities.hpp  visualization.hpp
src/car_cpp/src/: check_goal.cpp  control_plugin.cpp  diff_drive_multiple_wheel.cpp  diffdrive_multi_wheel_ros1.cpp  diffdrive_plugin_multi_wheel.cpp  filtered_navigation_nodes.cpp  frontier_values.cpp  frontier_values_old.cpp  gridmap.cpp  joints.cpp  map_priori.cpp  move_navigation_nodes_frontier.cpp  move_object.cpp  navigation_nodes.cpp  navigation_nodes_ground.cpp  obstacles_in_2d.cpp  occupied_nodes_near_obstacles.cpp  slope_terrain.cpp  termical_hikmicro.cpp  termical_hikmicro_ffmpeg_pipe.cpp  velodyne_noise_filter_node.cpp  voxel_grid_node.cpp
src/car_python/: package.xml  setup.cfg  setup.py
src/car_python/car/: backup_model_ppo_cnn_lstm.py  check_goal_gnss.py  circuit1.py  cmd_vel_to_throttle.py  colision_zone.py  costmap.py  detected_persons_local_to_latlon.py  fake_person_local_detections.py  fake_robot_pose.py  filter_points_cloud.py  fixposition_local_tf_from_odom.py  fixposition_map_anchor.py  fixposition_map_odom_static_from_odom.py  fixposition_odom_to_base_link_tf.py  fixposition_reframe.py  fixposition_tf_tree_for_zed.py  fp_poi_map_odom_static_test.py  fp_poi_map_static_from_start.py  frontier_centroid.py  fusion.py  gnss_goal_circuit.py  goal_local_marker.py  inference_full_model.py  inference_j8.py  inference_test_j8.py  inference_training_mode_simple.py  j8_bueno.py  j8_policy.py  j8_test_ppo.py  joystick_control.py  keyboard_control.py  latlon_circuit.py  latlon_posearray_to_local.py  latlon_posearray_to_local_utm.py  lidar_obstacle_detection.py  map_navegation.py  map_test_navigation_hgh.py  memory_map.py  movement_predictive.py  navsatfix_goal_to_map_pose.py  (+19 more)
src/car_python/config/: circuit_1.yaml  circuit_2.yaml  circuit_3.yaml  circuit_4.yaml  ekf_params.yaml  gnss_goals.yaml  goal.yaml  mapper_params_online_async.yaml  nav2.yaml  octomap.yaml  river_and_forest.yaml  world1.yaml  world_1_b.yaml
src/car_python/launch/: J8_unity.launch.py  circuit1.launch.py  circuit2.launch.py  circuit3.launch.py  circuit4.launch.py  control.launch.py  control_with_gazebo.launch.py  display.launch.py  easy_world.launch.py  ekf.launch.py  fixposition_local_j8_urdf.launch.py  fixposition_local_j8_urdf_fixposition.launch.py  fixposition_reframe.launch.py  fixposition_with_zed_fixposition_tf.launch.py  fixposition_with_zed_no_tf.launch.py  forest.launch.py  fp_poi_map_odom_base_link_camera_test.launch.py  fp_poi_map_odom_base_link_camera_zed_wrapper_test.launch.py  fp_poi_map_odom_base_link_camera_zed_wrapper_urdf_test.launch.py  fp_poi_map_odom_base_link_test.launch.py  fp_poi_map_odom_static_test.launch.py  fp_poi_map_static_from_start.launch.py  gazebo.launch.py  gazebo_empty_world.launch.py  gazebo_mountain.launch.py  gazebo_no_gui.launch.py  gazebo_simple2.launch.py  gazebo_simple3.launch.py  gazebo_simple4.launch.py  gazebo_simple5.launch.py  gazebo_simple6.launch.py  gazebo_simple7.launch.py  gazebo_simple8.launch.py  gazebo_simple9.launch.py  gazebo_simple_world.launch.py  gnss_goals.launch.py  goals_unity.launch.py  j8.launch.py  river_and_forest.launch.py  rtamap_test.launch.py  (+6 more)
src/car_python/meshes/: Camara.stl  Lidar.stl  base_link.stl  chasis_1.stl  direction_back_left_1.stl  direction_back_right_1.stl  direction_front_left_1.stl  direction_front_right_1.stl  rim.stl  rim_back_left_1.stl  rim_back_right_1.stl  rim_front_left_1.stl  rim_front_right_1.stl  suspension_back_left_1.stl  suspension_back_right_1.stl  suspension_front_left__1.stl  suspension_front_right_1.stl  tire.stl  tire_back_left_1.stl  tire_back_right_1.stl  tire_front_left_1.stl  tire_front_right_1.stl
src/car_python/models/mountain1/: model.config  model.sdf
src/car_python/urdf/: camara.plugin.xacro  car.gazebo  car.trans  car.xacro  control.plugin.xacro  lidar.plugin.xacro  object_movement.sdf  virt_lidar.xacro
src/car_python/worlds/: blender_builder.world  easy_world.world  empty.world  grass.world  grass_test.world  heightmap_world.world  map1_test.world  mountain.world  obstacles_and_traps.world  river_and_forest.world  test.world  world_1.world  world_1_b.world  world_1_b1.world  world_simple2.world  world_simple3.world  world_simple4.world  world_simple5.world  world_simple6.world  world_simple7.world  world_simple8.world  world_simple9.world  world_simple_object.world
src/ctl_mission/ctl_mission/: CMakeLists.txt  package.xml
src/ctl_mission/ctl_mission_interfaces/: CMakeLists.txt
src/gazebo_sim_pkgs/fix_position_pkg/: CMakeLists.txt  README.md
src/gazebo_sim_pkgs/j8_xacro_model/: CMakeLists.txt  Readme.md  model.config  package.xml
src/path_manager/path_manager/: CMakeLists.txt
src/path_manager/path_manager_interfaces/: CMakeLists.txt  package.xml
src/security_check/security_check/: CMakeLists.txt  package.xml
(+927 files in other folders)
