<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car</name>
  <version>0.0.0</version>
  <description>The car package</description>
  <maintainer email="luismidp7@gmail.com">Luis Miguel</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencias necesarias en tiempo de construcción y ejecución -->
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>rclpy</depend> <!-- Para nodos en Python -->
  <depend>std_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>nav2_msgs</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>

  <exec_depend>python3-pyproj</exec_depend>

  <build_depend>car_interfaces</build_depend>
  <exec_depend>car_interfaces</exec_depend> 
  <build_depend>argj801_ctl_platform_interfaces</build_depend>
  <exec_depend>argj801_ctl_platform_interfaces</exec_depend> 

  <!-- Dependencias para pruebas -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
