<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ctl_mission</name>
  <version>0.20.3</version>
  <description>Package the control package for Argo j8</description>

  <maintainer email="manuel.sanchez.m@uma.es">Manuel Sanchez Montero</maintainer>

  <license>Apache License 2.0</license>

  <author email="manuel.sanchez.m@uma.es">Manuel Sanchez Montero</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
    <depend>rclpy</depend>
  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
    <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>ublox_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>ctl_mission_interfaces</build_depend>
  <build_depend>path_manager_interfaces</build_depend>
  <build_depend>tf_transformations</build_depend>
  <depend>example_interfaces</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ublox_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ros_testing</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

<member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>