<?xml version="1.0"?>
<package format="3">
  <name>security_check</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="061949764x@uma.es">andabata</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>lifecycle_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>ctl_mission_interfaces</depend>
  <depend>ctl_mission</depend>
  <depend>security_check_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
