<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>argj801_ctl_platform_interfaces</name>
  <version>0.0.0</version>
  <description>
    Interfaces ROS 2 (messages/services) para el control de la plataforma del rover ARGJ801.

    Este paquete contiene:
    - msg/CmdThrottleMsg.msg: mando low-level (throttle/steering).
    - msg/KinematicDebugMsg.msg: estado cinemático y limitaciones aplicadas al mando.
    - srv/SetVelocity.srv, GetVelocity.srv: servicios simples (modo Arduino).
    - srv/EmergencyStop.srv: parada de emergencia.
  </description>
  <maintainer email="jage@uma.es">jage</maintainer>
  <license>MIT</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
